<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Automatic Silencer</string>
    <string name="begintime">Begin Time</string>
    <string name="endtime">End Time</string>
    <string name="add">Add Event</string>
    <string name="view">View Events</string>
    <string name="title_activity_input">Add event</string>
    <string name="enter_name">Name</string>
    <string name="begin">Begin</string>
    <string name="enter_date">Enter Date</string>
    <string name="enter_time">Time</string>
    <string name="end">End</string>
    <string name="done">Done</string>
    <string name="delete">Back</string>
    <string name="title_activity_testact">Testact</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_add_data">AddData</string>
    <string name="entry_saved">Your Entry has beed saved !! Do SEX</string>
    <string name="title_activity_view_schedule">ViewSchedule</string>
    <string name="title_activity_input_schedule">InputSchedule</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="title_activity_view_single">ViewSingle</string>
    <string name="repeat">Repeat</string>
    
</resources>