<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".InputSchedule" >

    <CheckBox
        android:id="@+id/checkBox1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etime"
        android:layout_marginTop="19dp"
        android:onClick="onCheckboxClicked"
        android:text="@string/monday" />

    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/checkBox1"
        android:layout_below="@+id/checkBox1"
        android:onClick="onCheckboxClicked"
        android:text="@string/tuesday" />

    <CheckBox
        android:id="@+id/checkBox3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/checkBox2"
        android:layout_below="@+id/checkBox2"
        android:onClick="onCheckboxClicked"
        android:text="@string/wednesday" />

    <CheckBox
        android:id="@+id/checkBox4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/checkBox3"
        android:layout_below="@+id/checkBox3"
        android:onClick="onCheckboxClicked"
        android:text="@string/thursday" />

    <CheckBox
        android:id="@+id/checkBox5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/checkBox4"
        android:layout_below="@+id/checkBox4"
        android:onClick="onCheckboxClicked"
        android:text="@string/friday" />

    <CheckBox
        android:id="@+id/checkBox6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/checkBox4"
        android:layout_below="@+id/checkBox5"
        android:onClick="onCheckboxClicked"
        android:text="@string/saturday" />

    <CheckBox
        android:id="@+id/checkBox7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/checkBox6"
        android:layout_below="@+id/checkBox6"
        android:onClick="onCheckboxClicked"
        android:text="@string/sunday" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/checkBox6"
        android:layout_alignParentTop="true"
        android:ems="10"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/done1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/delete1"
        android:layout_alignBottom="@+id/delete1"
        android:layout_alignLeft="@+id/checkBox7"
        android:layout_alignRight="@+id/btime"
        android:onClick="onClick"
        android:text="@string/done" />

    <Button
        android:id="@+id/delete1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/etime"
        android:layout_alignRight="@+id/etime"
        android:layout_below="@+id/checkBox7"
        android:onClick="onClick"
        android:text="@string/delete" />

    <Button
        android:id="@+id/btime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText1"
        android:layout_marginRight="34dp"
        android:layout_marginTop="28dp"
        android:layout_toLeftOf="@+id/etime"
        android:onClick="showTimePickerDialogb"
        android:text="@string/begintime" />

    <Button
        android:id="@+id/etime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btime"
        android:layout_alignBottom="@+id/btime"
        android:layout_alignRight="@+id/editText1"
        android:layout_marginRight="30dp"
        android:onClick="showTimePickerDialoge"
        android:text="@string/endtime" />

</RelativeLayout>