<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Testact" >

	<EditText
        android:id="@+id/name_schedule"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/enter_name" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/name_schedule"
        android:layout_below="@+id/name_schedule"
        android:layout_marginTop="20dp"
        android:text="@string/begin"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/begin2"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_alignBottom="@+id/begin1"
        android:layout_alignRight="@+id/name_schedule"
        android:text="@string/enter_time" 
        android:onClick="showTimePickerDialogb"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/begin1"
        android:layout_below="@+id/begin1"
        android:layout_marginTop="28dp"
        android:text="@string/end"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/end1"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_alignLeft="@+id/textView2"
        android:layout_centerVertical="true"
        android:text="@string/enter_date"
        android:onClick="showDatePickerDialoge" />

    <Button
        android:id="@+id/begin1"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="14dp"
        android:text="@string/enter_date" 
        android:onClick="showDatePickerDialogb"/>

    <Button
        android:id="@+id/end2"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_alignLeft="@+id/begin2"
        android:layout_alignTop="@+id/end1"
        android:text="@string/enter_time" 
        android:onClick="showTimePickerDialoge"/>

    <Button
        android:id="@+id/done"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_alignLeft="@+id/end1"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="19dp"
        android:text="@string/done" 
        android:onClick="done"/>

    <Button
        android:id="@+id/delete"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_alignBottom="@+id/done"
        android:layout_toRightOf="@+id/done"
        android:text="@string/delete" />

</RelativeLayout>